Add character deletion flow
